name:                m4rkdown
version:             0.1
homepage:            https://github.com/thumphries/m4rkdown
author:              Tim Humphries
maintainer:          tim@utf8.me
bug-reports:         https://github.com/thumphries/m4rkdown
license:             BSD3
license-file:        LICENSE
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md

synopsis:
  A terrible macro system for CommonMark
description:
  A terrible macro system for CommonMark.

source-repository head
  type: git
  location: git://github.com/thumphries/m4rkdown.git

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:       -Wall
  build-depends:
                     base                           >= 4.9           && < 4.11
                   , cmark                          == 0.5.*
                   , transformers                   >= 0.4           && < 0.7

  exposed-modules:
                     CMark.Macro

  other-modules:
                     CMark.Macro.Monad
